--- a/index.html
+++ b/index.html
@@ -160,34 +160,54 @@
             </div>
         </div>
     </section>
-    <!-- Section Jeux -->
-<section id="jeux" class="store-section">
-    <div class="container">
-        <h2 class="section-title">Boutique de Jeux</h2>
-        <div class="store-grid">
-            <div class="game-card">
-                <img src="https://mediazone.ma/product/images/16044-RFH46NX2/ea-sports-fc-fifa-25-standard-pour-ps4-et-ps5-maroc.webp" alt="FIFA 25">
-                <h3>FIFA 25</h3>
-                <p class="price">299 MAD</p>
-                <button class="btn">Acheter</button>
-            </div>
-            <div class="game-card">
-                <img src="https://assets.xboxservices.com/assets/71/b5/71b50f29-5799-4be1-97ef-d58d57c9fe37.jpg?n=CoD-Modern-Warfare-III_GLP-Page-Hero-0_1083x1222_02.jpg" alt="Call of Duty">
-                <h3>Call of Duty</h3>
-                <p class="price">399 MAD</p>
-                <button class="btn">Acheter</button>
-            </div>
-            <div class="game-card">
-                <img src="https://upload.wikimedia.org/wikipedia/en/a/a5/Grand_Theft_Auto_V.png" alt="GTA V">
-                <h3>GTA V</h3>
-                <p class="price">249 MAD</p>
-                <button class="btn">Acheter</button>
+    <section id="jeux" class="store-section">
+        <div class="container">
+            <h2 class="section-title">Boutique de Jeux</h2>
+            <div class="store-grid">
+                <div class="game-card">
+                    <img src="https://mediazone.ma/product/images/16044-RFH46NX2/ea-sports-fc-fifa-25-standard-pour-ps4-et-ps5-maroc.webp" alt="FIFA 25">
+                    <h3>FIFA 25</h3>
+                    <p class="price">299 MAD</p>
+                    <button class="btn">Acheter</button>
+                </div>
+                <div class="game-card">
+                    <img src="https://assets.xboxservices.com/assets/71/b5/71b50f29-5799-4be1-97ef-d58d57c9fe37.jpg?n=CoD-Modern-Warfare-III_GLP-Page-Hero-0_1083x1222_02.jpg" alt="Call of Duty">
+                    <h3>Call of Duty</h3>
+                    <p class="price">399 MAD</p>
+                    <button class="btn">Acheter</button>
+                </div>
+                <div class="game-card">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/a/a5/Grand_Theft_Auto_V.png" alt="GTA V">
+                    <h3>GTA V</h3>
+                    <p class="price">249 MAD</p>
+                    <button class="btn">Acheter</button>
+                </div>
+                <div class="game-card">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/e/ee/God_of_War_Ragnar%C3%B6k_cover.jpg">
+                    <h3>God of War Ragnarok</h3>
+                    <p class="price">349 MAD</p>
+                    <button class="btn">Acheter</button>
+                </div>
+                <div class="game-card">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/b/b9/Elden_Ring_Box_art.jpg" alt="Elden Ring">
+                    <h3>Elden Ring</h3>
+                    <p class="price">379 MAD</p>
+                    <button class="btn">Acheter</button>
+                </div>
+                <div class="game-card">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/4/44/Red_Dead_Redemption_II.jpg" alt="Red Dead Redemption 2">
+                    <h3>Red Dead Redemption 2</h3>
+                    <p class="price">329 MAD</p>
+                    <button class="btn">Acheter</button>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+    
 
-<!-- Footer -->
+
+
+
 <footer class="footer">
     <div class="container">
         <p>&copy; 2025 EMSI Gaming. Tous droits réservés.</p>
